[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/States/Abilities/Utility/Blink/Blink.gd" type="Script" id=1]
[ext_resource path="res://Spells/Scenes/Factories/ParticleFactory.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/States/Abilities/Utility/Blink/BlinkParticles.tscn" type="PackedScene" id=3]

[node name="BlinkState" type="Node2D"]
script = ExtResource( 1 )

[node name="ParticleFactory" parent="." instance=ExtResource( 2 )]
particle_scene = ExtResource( 3 )

[node name="Origin" type="Position2D" parent="."]

[node name="VerticalRaycast" type="RayCast2D" parent="Origin"]
position = Vector2( 0, -256 )
enabled = true
cast_to = Vector2( 0, 240 )
collide_with_areas = true

[node name="HorizontalRaycast" type="RayCast2D" parent="Origin"]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 175, 0 )
collide_with_areas = true
